# mfs16

./: .gitignore  Cargo.toml  README.md  autobuild.sh  cli_notes.txt  run
.github/workflows/: rust.yml
assembler/: Cargo.toml
assembler/src/: arg_parser.rs  asm_lexer.rs  asm_parser.rs  codemap.rs  main.rs
assembler/src/asm_lexer/: lexer_tests.rs  token.rs  token_type.rs
assembler/src/asm_parser/: instruction_parser.rs  parser_tests.rs
assembler/tests/: bar.mfs16  foo.mfs16
cli/: Cargo.toml
cli/src/: arg_parser.rs  main.rs
desktop/: Cargo.toml
desktop/src/: arg_parser.rs  config.rs  main.rs  utils.rs
mfs16-book/: book.toml
mfs16assembler/: Cargo.toml
mfs16assembler/src/: asm_lexer.rs  asm_parser.rs  main.rs
mfs16assembler/src/asm_lexer/: lexer_tests.rs  token.rs
mfs16assembler/src/asm_parser/: instruction_parser.rs  parser_tests.rs
mfs16assembler/tests/: bar.mfs16
mfs16book/: update_site
mfs16book/src/: .demo_programs.md  SUMMARY.md  configuration.md  cpu.md  demo_programs.md  desktop.md  drives.md  gpu.md  instruction_set.md  interrupts.md  introduction.md  io.md  memory_map.md  mfs16asm.md  quick_start_linux.md
mfs16cli/: Cargo.toml
mfs16cli/src/: main.rs
mfs16core/: Cargo.toml  build.rs
mfs16core/benches/: cpu_cycle_bench.rs  mem_read_write_bench.rs
mfs16core/src/: computer.rs  cpu.rs  drive.rs  gpu.rs  helpers.rs  keyboard.rs  lib.rs  memory.rs  mmu.rs  ram.rs
mfs16core/src/cpu/: addr.rs  flag.rs  instruction.rs  pc.rs  register.rs
mfs16core/src/cpu/instruction/: alu.rs  fpu.rs  helpers.rs  instruction_helpers.rs  instruction_impl.rs  instruction_tests.rs
mfs16core/src/drive/: drive_header.rs
mfs16core/src/keyboard/: kb_code.rs
mfs16core/tests/: alu_tests.rs  alu_tests_2.rs  helpers.rs  instruction_tests.rs  jp_tests.rs  ld_tests.rs  math_tests.rs  misc_tests.rs  stack_tests.rs
mfs16desktop/: Cargo.toml
mfs16desktop/src/: arg_parser.rs  config.rs  debug.rs  emulator.rs  main.rs  palette.rs  scancodes.rs  utils.rs
mfs16desktop/src/palette/: preset_palettes.rs
programs/: 5x7basic  bouncing_ball  bouncing_logo  fibonacci.mfs16  fibonacci_split  hello_world  kb  kb_lib.mfs16  logo  pixel_test  promenade  scribe  toggle_screen  type
programs/boot/: 5x7basic.mfs16  logo.mfs16  main.mfs16  make  test_pattern.mfs16
programs/fib/: fibonacci_split.mfs16  fibonacci_split_helpers.mfs16
programs/fonts/: 5x7basic.mfs16
programs/graphic_tests/: bouncing_ball.mfs16  bouncing_logo.mfs16  hello_world.mfs16  logo.mfs16  make_bouncing_ball.sh  make_bouncing_logo.sh  make_hello_world.sh  make_logo.sh  pixel_test.mfs16  test_pattern.mfs16  toggle_screen.mfs16
programs/input_tests/: kb.mfs16  make_kb.sh  make_promenade.sh  make_scribe.sh  make_type.sh  promenade.mfs16  scribe.mfs16  type.mfs16
programs/libs/: kb_lib.mfs16
programs/pong/: kb_lib.mfs16  kb_lib_h.mfs16  main.mfs16  make.sh
programs/write_text/: hello_world.mfs16  pixel_test.mfs16
sdl/: Cargo.toml
