[package]
name = "mfs16core"
version = "0.1.0"
edition = "2021"
authors = ["Max Gilmour"]
repository = "https://github.com/maxgmr/mfs16"
license-file = "LICENSE"
build = "build.rs"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
phf = { version = "0", features = ["macros"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0"
pretty_assertions = "1"
strum = "0"
strum_macros = "0"

[[bench]]
name = "cpu_cycle_bench"
harness = false
