[package]
name = "mfs16core"
version = "0.1.0"
edition = "2021"
authors = ["Max Gilmour"]
repository = "https://github.com/maxgmr/mfs16"
license-file = "LICENSE"

[dependencies]
camino = "1.1.9"
# phf = { version = "0.11.3", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4.1"
strum = "0.26.3"
strum_macros = "0.26.4"
tempfile = "3.16.0"

[[bench]]
name = "cpu_cycle_bench"
harness = false

[[bench]]
name = "mem_read_write_bench"
harness = false
