[package]
name = "mfs16desktop"
version = "0.1.0"
edition = "2021"
authors = ["Max Gilmour"]
repository = "https://github.com/maxgmr/mfs16"
build = "build.rs"
license-file = "LICENSE"

[dependencies]
camino = "1"
clap = { version = "4", features = ["cargo", "derive", "string"] }
color-eyre = "0"
config = "0"
crossbeam = "0"
directories = "5"
hex_color = { version = "3", features = ["serde"] }
mfs16core = { path = "../mfs16core" }
sdl2 = "0"
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
toml = "0"

[build-dependencies]
vergen = { version = "9", features = ["build", "si"] }
