[package]
name = "mfs16desktop"
version = "0.1.0"
edition = "2021"
authors = ["Max Gilmour"]
repository = "https://github.com/maxgmr/mfs16"
build = "build.rs"
license-file = "LICENSE"

[dependencies]
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.27", features = ["cargo", "derive", "string"] }
color-eyre = "0.6.3"
config = "0.15.7"
crossbeam = "0.8.4"
directories = "5.0.1"
hex_color = { version = "3.0.0", features = ["serde"] }
mfs16core = { path = "../mfs16core" }
sdl2 = { version = "0", features = ["bundled", "static-link"] }
serde = { version = "1.0.217", features = ["derive"] }
shellexpand = "3.1.0"
toml = "0.8.19"

[build-dependencies]
vergen = { version = "9.0.4", features = ["build", "si"] }
